--- a/KnightNews/KKNewsFeaturedTableViewCell.xib
+++ b/KnightNews/KKNewsFeaturedTableViewCell.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A361c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -22,8 +21,8 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By John Doe, Title here" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMH-m2-dJf">
-                        <rect key="frame" x="10" y="196" width="135" height="15"/>
-                        <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="13"/>
+                        <rect key="frame" x="10" y="196" width="135.5" height="15"/>
+                        <fontDescription key="fontDescription" name="Georgia-Italic" family="Georgia" pointSize="13"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -42,7 +41,7 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="748" text="3 d" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Itj-ss-SHq">
                         <rect key="frame" x="291" y="196" width="18" height="14"/>
-                        <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="13"/>
+                        <fontDescription key="fontDescription" name="Georgia-Italic" family="Georgia" pointSize="13"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -52,11 +51,11 @@
                     <constraint firstAttribute="trailingMargin" secondItem="1hi-HH-oSW" secondAttribute="trailing" constant="2" id="5UQ-H7-txL"/>
                     <constraint firstItem="aMH-m2-dJf" firstAttribute="top" secondItem="VQP-48-Fb8" secondAttribute="bottom" constant="7.5" id="7pa-tl-bFh"/>
                     <constraint firstAttribute="trailingMargin" secondItem="xYf-0y-15f" secondAttribute="trailing" constant="11" id="Aq9-A6-F5M"/>
+                    <constraint firstItem="aMH-m2-dJf" firstAttribute="baseline" secondItem="Itj-ss-SHq" secondAttribute="baseline" constant="1" id="DUP-nE-Lqv"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Itj-ss-SHq" secondAttribute="trailing" constant="2.5" id="F64-fe-BqV"/>
                     <constraint firstItem="VQP-48-Fb8" firstAttribute="top" secondItem="1hi-HH-oSW" secondAttribute="bottom" constant="9.5" id="Nw4-yt-j3d"/>
                     <constraint firstItem="Itj-ss-SHq" firstAttribute="top" secondItem="VQP-48-Fb8" secondAttribute="bottom" constant="7.5" id="ReG-Ta-F3K"/>
                     <constraint firstItem="VQP-48-Fb8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="UeI-2J-bs9"/>
-                    <constraint firstItem="aMH-m2-dJf" firstAttribute="centerY" secondItem="Itj-ss-SHq" secondAttribute="centerY" id="XuM-nP-QhV"/>
                     <constraint firstAttribute="bottomMargin" secondItem="xYf-0y-15f" secondAttribute="bottom" constant="4" id="Zey-RS-0cJ"/>
                     <constraint firstItem="1hi-HH-oSW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="i6B-8F-gtf"/>
                     <constraint firstAttribute="trailingMargin" secondItem="VQP-48-Fb8" secondAttribute="trailing" constant="2" id="jn1-j6-0eU"/>
@@ -72,7 +71,7 @@
                 <outlet property="articleTimeLabel" destination="Itj-ss-SHq" id="UEz-jx-Bed"/>
                 <outlet property="articleTitle" destination="VQP-48-Fb8" id="fGE-Aq-Q4i"/>
             </connections>
-            <point key="canvasLocation" x="245.5" y="258.5"/>
+            <point key="canvasLocation" x="245" y="258.5"/>
         </tableViewCell>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
